# pocketdaw

./: .gitignore  .gitmodules  README.md  cpu-simpleperf-20190816T163701.trace  d.txt  gradle.properties
app/cpp/: CMakeLists.txt  CMakeLists_try.txt  Effector.cpp  Effector.h  MainActivity.cpp  Synth.cpp  Synth.h
app/cpp/AMGEngine/: A.cpp  A.h  AMGEngine.h  CMakeLists.txt  FullDuplexPass.h  FullDuplexStream.h  G.cpp  G.h  M.cpp  M.h  MainActivity_.cpp
app/cpp/AMGEngine/entry/: entry_android.cpp
app/cpp/AMGEngine/imgui/: imgui.cpp
app/cpp/AMGEngine/ndk_helper/: NDKHelper.h  gestureDetector.h  vecmath.h
app/cpp/AudioEffects/: AudioEffect.cpp  AudioEffect.h  ConvolutionReverb.cpp  Delay.cpp  MoogFilter.cpp  Oscilloscope.cpp  Oscilloscope.h  Saturator.cpp  Saturator.h  StereoDelay.cpp  StereoDelay.h
app/cpp/GUI/: AnalogEncoder.cpp  AnalogEncoder.h  Button.cpp  Button.h  Canvas.cpp  Canvas.h  Encoder.cpp  Encoder.h  EncoderButton.h  FullscreenWindow.h  Graph.h  IECanvas.h  Jack.cpp  Jack.h  Knob.h  Led.cpp  Led.h  Menu.cpp  Menu.h  Plot.h  Text.h  Wire.h
app/cpp/Instruments/: Brute.cpp  Brute.h  DrumRack.cpp  DrumRack.h  Instrument.h  Operator.cpp  Operator.h  Oscillator.cpp  Oscillator.h  Sampler.cpp  Sampler.h  SingleTone.cpp  SoundObject5.h  SplineSynth.cpp  SplineSynth.h  VCO.cpp
app/cpp/Instruments/AnalogDrums/: AnalogDrum.h  Kick.cpp  Kick.h  Snare.cpp  Snare.h
app/cpp/Instruments/Envelopes/: ADSR.h
app/cpp/MidiEffects/: Arpeggiator.cpp  LFO.h  MidiEffect.cpp  MidiMonitor.cpp  MidiMonitor.h  Sequencer.h
app/cpp/Orchestration/: Chain.cpp  Chain.h  Master.cpp  Master.h  Midi.h  Rack.h  Track.cpp  Track.h
app/cpp/common/: bgfx_utils.cpp  bgfx_utils.h  example-glue.cpp
app/cpp/common/AudioEffects/: AudioEffect.h  ConvolutionReverb.cpp  ConvolutionReverb.h  Delay.cpp  Delay.h  MoogFilter.cpp  MoogFilter.h  Oscilloscope.cpp  Oscilloscope.h  StereoDelay.cpp  StereoDelay.h  ThreeBandEQ.cpp
app/cpp/common/Engine/: Engine.cpp  Engine.h  G.cpp  G.h
app/cpp/common/GUI/: Button.cpp  Button.h  Canvas.cpp  Canvas.h  Encoder.cpp  Encoder.h  EncoderButton.cpp  EncoderButton.h  Graph.cpp  Graph.h  IECanvas.h  Knob.cpp  Knob.h  Led.cpp  Led.h  Menu.cpp  Menu.h  Plot.h  Slider.cpp  Slider.h  styles.h
app/cpp/common/Instruments/: Brute.h  DrumRack.h  Instrument.cpp  Instrument.h  Metronome.h  Operator.h  Oscillator.cpp  Oscillator.h  Sampler.cpp  Sampler.h  SingleTone.cpp  SingleTone.h
app/cpp/common/Instruments/AnalogDrums/: AnalogDrum.cpp  AnalogDrum.h  Kick.cpp  Kick.h  Snare.cpp  Snare.h
app/cpp/common/Instruments/Envelopes/: AD.h  ADSR.h
app/cpp/common/Instruments/ModularSynth/: VCO.h
app/cpp/common/MidiEffects/: Arpeggiator.cpp  Arpeggiator.h  Sequencer.cpp  Sequencer.h
app/cpp/common/Orchestration/: Chain.cpp  Chain.h  Master.cpp  Master.h  Rack.h  Track.cpp  Track.h
app/cpp/common/Utils/: Utils.h
app/cpp/common/entry/: entry.h  entry_android.cpp
app/cpp/ndkHelperBin/Debug/x86/: cmake_install.cmake
app/cpp/ndkHelperBin/Release/armeabi-v7a/: cmake_install.cmake
app/cpp/ndkHelperBin/Release/x86/: cmake_install.cmake
app/cpp/ndk_helper/: gestureDetector.cpp  gestureDetector.h
app/cpp/synth/: MainActivity.cpp  Synth.h  helloworld.cpp
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  MainActivity.cpp  MainActivity.h  Synth.h  Synth.h.rej  TeapotNativeActivity.cpp  TeapotRenderer.cpp  TeapotRenderer.h  jni-bridge.cpp
app/src/main/cpp/AudioEffects/: AudioEffect.cpp  AudioEffect.h  Delay.cpp  Delay.h  Lissajous.cpp  MoogFilter.cpp  Oscilloscope.cpp  Oscilloscope.h  StereoDelay.cpp  StereoDelay.h  Waveform.cpp  Waveform.h
app/src/main/cpp/AudioEngine/: AudioEngine.cpp  AudioEngine.h
app/src/main/cpp/Engine/: A.h  Engine.cpp  Engine.h  G.cpp  G.h  M.cpp  M.h
app/src/main/cpp/GUI/: Button.cpp  Button.h  Canvas.cpp  Canvas.h  Encoder.cpp  Encoder.h  Font.cpp  Font.h  GUI.h  Graph.cpp  Graph.h  GraphicEngine.cpp  GraphicEngine.h  GraphicObject.cpp  GraphicObject.h  IECanvas.h  Knob.cpp  Knob.h  Led.cpp  Led.h  Menu.cpp  Menu.h  Plot.cpp  Plot.h  Shader.cpp  Shader.h  Text.cpp  Text.h
app/src/main/cpp/Instruments/: ADSR.cpp  ADSR.h  DrumRack.h  Instrument.cpp  Instrument.h  Metronome.cpp  Metronome.h  Operator.cpp  Operator.h  Oscillator.cpp  Oscillator.h  Sampler.cpp  Sampler.h  Sine.cpp  Sine.h  SingleTone.cpp  SingleTone.h
app/src/main/cpp/Interface/: Interface.h
app/src/main/cpp/MidiEffects/: Arpeggiator.cpp  Arpeggiator.h  MidiEffect.cpp  MidiEffect.h  Scale.h
app/src/main/cpp/Orchestration/: Chain.cpp  Chain.h  Master.h  (+7 more)
core/: CMakeCache.txt  CMakeLists.txt  MainActivity.cpp  Synth.h
core/AudioEffects/: Calibrator.cpp  Calibrator.h  ConvolutionReverb.h  Delay.cpp  Delay.h  LoopStation.cpp  LoopStation.h  Looper.cpp  Looper.h  MoogFilter.h  Oscilloscope.cpp  Oscilloscope.h  PitchShifter.cpp  PitchShifter.h  PitchTracker.cpp  PitchTracker.h  Saturator.cpp  Saturator.h  Spectrum.cpp
core/AudioEffects/Filters/: LadderFilterBase.h  MoogRKSimulationModel.h  Util.h
core/GUI/: Button.cpp  Button.h  Canvas.h  Encoder.cpp  Encoder.h  EncoderButton.cpp  EncoderButton.h  FullscreenWindow.cpp  FullscreenWindow.h  Graph.cpp  Graph.h  IECanvas.h  Jack.cpp  Jack.h  Knob.h  Menu.cpp  Menu.h  Plot.h  Selector.cpp  Slider.cpp  Slider.h  Text.cpp  Text.h  Wheel.cpp  Wire.cpp  Wire.h  styles.h
core/Instruments/: Apparatus.cpp  Apparatus.h  Brute.h  DoubleSplineSynth.cpp  DoubleSplineSynth.h  DrumRack.h  Instrument.cpp  Instrument.h  Metronome.cpp  Operator.cpp  Operator.h  Oscillator.cpp  Oscillator.h  PDContainer.cpp  PDContainer.h  Sampler.cpp  SingleTone.cpp  SingleTone.h  SoundObject5.h  SplineSynth.cpp  SplineSynth.h  VCO.h
core/Instruments/AnalogDrums/: Kick.cpp  Kick.h  Snare.h
core/Instruments/Envelopes/: AD.h  ADS.h  ADSR.cpp  ADSR.h
core/Instruments/ModularSynth/: Module.cpp  VCO.cpp
core/Link/: LinkManager.h
core/MidiEffects/: LFO.cpp  LFO.h  MidiDelay.cpp  MidiDelay.h  MidiMonitor.h  Sequencer.h
core/Orchestration/: Chain.h  Master.cpp  Master.h  Midi.h  Rack.cpp  Rack.h  Track.h
core/Utils/: Spline.h
(+209 files in other folders)
